--- a/css/styal.css
+++ b/css/styal.css
@@ -50,14 +50,22 @@ body {
     font-size: 24px;
 }
 
+.site-logo-site-footer{
+    color: #FFFFFF;
+}
+
 .site-logo:hover{
     color: #DE2E54;
 }
 .site-logo:active{
     opacity: 0.6;
 }
+.site-logo-site-footer:active{
+    color: #fff;
+}
 
 .site-logo-img{
+    border-radius: 50%;
     margin-right: 16px;
 }
 
@@ -98,6 +106,17 @@ body {
     opacity: 0.6;
 }
 
+.sitenav-site-footer .sitenav-link{
+    color: #fff;
+}
+
+.sitenav-site-footer .sitenav-link:hover{
+    color: #DE2E54;
+}
+
+.sitenav-site-footer .sitenav-link:active{
+    color: #fff;
+}
 /* MAIN-LINK */
 
 .main-link{
@@ -121,4 +140,19 @@ body {
     background-color: #DE2E54;
     color: #FFFFFF;
     opacity:0.6;
+}
+
+/* SITE-FOOTER */
+
+.site-footer{
+    padding-top: 24px;
+    padding-bottom: 24px;
+    background-color: #222;
+    color: #FFFFFF;
+}
+
+.site-footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
