--- a/css/styal.css
+++ b/css/styal.css
@@ -3,6 +3,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -152,6 +156,26 @@ body {
     opacity: 1;
 }
 
+
+.main-link-outline{
+    color: #fff;
+    border-color: #fff;
+    background-color: transparent;
+}
+.main-link-outline:hover{
+    color: #fff;
+    background-color: #DE2E54;
+    border-color: transparent;
+}
+.main-link-outline:active{
+    background: #DE2E54;
+    opacity: 0.6;
+}
+.main-link-outline:active{
+    background-color: rgba(222, 46, 84, 0.6);
+    opacity: 1;
+}
+
 /*HERO*/
 
 .hero{
@@ -251,6 +275,37 @@ body {
     display: flex;
     justify-content: center;
 }
+
+
+/* CTA */
+
+.cta{
+    background-color:#0EB4C1;
+    padding-top: 64px;
+    padding-right: 64px;
+}
+
+.cta-heading{
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 40px;
+    font-size: 36px;
+    font-weight: bold;
+    line-height: 1.2;
+    font-family:"Open Sans Condensed","Open Sans","Arial",sans-serif;
+    color: #fff;
+}
+
+.cta-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cta-links-imem:not(:last-child){
+    margin-right: 40px;
+}
+
 
 
 /* SITE-FOOTER */
