--- a/css/styal.css
+++ b/css/styal.css
@@ -21,7 +21,7 @@ body {
     width: 100%;
     max-width: 1160px;
     padding-right: 30px;
-    padding-bottom: 30px;
+    padding-left: 30px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -209,7 +209,6 @@ body {
 
 .hero-text{
     width: 440px;
-    margin-top: 0;
     margin-bottom: 36px;
 }
 
