--- a/css/styal.css
+++ b/css/styal.css
@@ -262,6 +262,8 @@ body {
     height: 200px;
     object-fit: cover;
     margin-right: 64px;
+    box-shadow: 0px 12px 24px -8px rgba(0, 107, 116, 0.3);
+    border-radius: 24px;
 }
 .index-service-content{
     width: 600px;
